--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,2 @@
-certifi==2021.5.30
-chardet==4.0.0
-click==8.0.1
-colorama==0.4.4
-DateTime==4.3
-Flask==2.0.1
-gunicorn==20.1.0
-idna==2.10
-itsdangerous==2.0.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-pytz==2021.1
-requests==2.25.1
-urllib3==1.26.6
-Werkzeug==2.0.1
-zope.interface==5.4.0
-cfscrape==2.1.1
-coinbase==2.1.0
-beautifulsoup4==4.9.3
-bs4==0.0.1
-lxml==4.6.3
-soupsieve==2.2.1
+connexion==2.14.1
+Flask==2.2.2
